<resources>
    <string name="app_name">大景专车</string>
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="title_activity_login2">登录</string>
    <string name="title_activity_address_selection">常用地址</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">首页</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ok">确定</string>
    <string name="hint">提示</string>
    <string name="cancel">取消</string>

    <string name="version_upgrade">版本升级</string>
    <string name="about_we">关于我们</string>
    <string name="log_out">退出登录</string>
    <string name="update">立即更新</string>
    <string name="soft_update_fail">更新失败</string>
    <string name="soft_update_no">不需要更新</string>
    <string name="soft_updating">更新中</string>

    <!-- 下拉刷新，上拉加载更多 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在更新数据</string>
    <string name="pull_to_refresh_update">最后更新:</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_from_bottom_release_label">松开后加载</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在加载数据</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中……</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_order">请在我的订单 - 选择订单</string>
    <string name="work_clock_in">上班打卡</string>
    <string name="work_punch_out">下班打卡</string>
</resources>
