<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect_dlg_ok_cancel_backgroud"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="#3C3C3C"
        android:padding="10dp"
        android:text="@string/hint"/>

    <TextView
        android:id="@+id/txt_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:textSize="14sp"
        android:textColor="#3C3C3C" />

    <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#C8C8C8" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ok"
                android:textColor="#06396A"
                android:textSize="14sp"  />

            <View
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:background="#D9D9D9" />
            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="#06396A"
                android:textSize="14sp" />

            
        </LinearLayout>
    

</LinearLayout>